--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Si tu pisses contre le vent, le vent te pissera dessus</title>
   </head>
   <body>
   
